// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Render must match consent() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash flash-consent"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match consentWithInput() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash flash-consent"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match error() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash flash-error"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match info() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match regular() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match regularMultipleParagraphs() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash"
    >
      <p>
        This is a longer flash message in it's own paragraph. It ends up looking something like this. If we keep adding more text, it'll eventually wrap to a new line.
      </p>
      <p>
        And this is another paragraph.
      </p>
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match success() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash flash-success"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<Alert /> Render must match warning() 1`] = `
<div
  className={null}
>
  <div
    className="flash-messages"
  >
    <div
      className="flash flash-warn"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;
